--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/isotope.js"></script>
 <script src="js/waypoints.min.js"></script>
+<!-- jQuery (before Bootstrap) -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!-- Bootstrap JS -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 
 <script src="js/wow.min.js"></script>
 
